# FloatPoint-OJ

./: .dockerignore  .gitignore  .prettierrc  Dockerfile.admin  Dockerfile.client  Dockerfile.judger  Dockerfile.server  LICENSE  README.md  docker-compose.yml  dockerfile  index.html  package-lock.json  package.json  vite.config.js
admin/: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
admin/src/: main.jsx
client/: .eslintrc.cjs  .prettierignore  components.json  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.js
client/src/: App.jsx  main.jsx  middleware.ts
judger/: Cargo.toml  meta.txt  package-lock.json  package.json
judger/scripts/: compare.bash
judger/src/: checker.rs  controllers.js  db.rs  env_tool.rs  index.js  judger.rs  languages.rs  main.rs  metadata.rs  minio.rs  models.rs  rabbitmq.rs  routes.js
judger/src/judgeEngine/: getFinalResult.js  index.js  languages.js
server/: .prettierignore  .prettierrc  eslint.config.mjs  nest-cli.json  package-lock.json  package.json  tsconfig.json
server/src/: app.module.ts  data-source.ts  index.js  main.ts
server/test/: app.e2e-spec.ts
src/: App.jsx  main.jsx
src/components/: ChipList.jsx  ContestSetting.jsx  ContestStanding.jsx  CountDown.jsx  CreateProblemDialog.jsx  Error.jsx  Footer.jsx  FullOutlineInput.jsx  Header.jsx  MdEditor.jsx  MonthlyLanguagesCard.jsx  MonthlySubmissionsCard.jsx  MultiSelect.jsx  NewestActivitiesCard.jsx  (+11 more)
(+780 files in other folders)
