[package]
name = "judger"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.4"
aws-credential-types = "1.2.5"
aws-sdk-s3 = { version = "1.101.0", features = ["behavior-version-latest"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-lite = "2.6.1"
lapin = "3.1.0"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","uuid", "postgres"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4","serde"] }
